--- a/Example/Podfile
+++ b/Example/Podfile
@@ -16,7 +16,7 @@ target 'Analytical_Example' do
     # Workaround for Swift3 versions
     #
 
-    pod 'Quick', :git => 'https://github.com/Quick/Quick', :branch => 'swift-3.0'
-    pod 'Nimble', :git => 'https://github.com/Quick/Nimble', :branch => 'swift-3.0'
+    pod 'Quick', :git => 'https://github.com/Quick/Quick'
+    pod 'Nimble', :git => 'https://github.com/Quick/Nimble'
   end
 end
