Pod update, swift 3 updates

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -7,17 +7,19 @@ target 'Analytical_Example' do
   pod 'Analytical', :path => '../'
   
   pod 'Google/Analytics'
-  pod 'Mixpanel-swift', :git => 'https://github.com/mixpanel/mixpanel-swift'
-  pod 'XCGLogger', :git => 'https://github.com/DaveWoodCom/XCGLogger'
 
   target 'Analytical_Tests' do
     inherit! :search_paths
 
-    #
-    # Workaround for Swift3 versions
-    #
-
-    pod 'Quick', :git => 'https://github.com/Quick/Quick'
-    pod 'Nimble', :git => 'https://github.com/Quick/Nimble'
+    pod 'Quick'
+    pod 'Nimble'
   end
+end
+
+post_install do |installer|
+    installer.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+            config.build_settings['SWIFT_VERSION'] = '3.0'
+        end
+    end
 end
