--- a/Example/Podfile
+++ b/Example/Podfile
@@ -9,7 +9,7 @@ target 'Analytical_Example' do
   # Add this Podspec and re-add Google Provider to the target, to test it.
   #
   pod 'Google/Analytics'
-  pod 'Firebase/Analytics'
+  pod 'Firebase/Core'
   pod 'Answers'
 
   target 'Analytical_Tests' do
